상품 DIV 생성 및 공통 css추가

--- a/gyproject/src/main/webapp/css/main/home.css
+++ b/gyproject/src/main/webapp/css/main/home.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 
-.test {
-	border: 1px solid black;
-	width: 100%;
-	heigth: 100%;
+.top-image {
+	width: 80%;
+	height: 250px;
 }
