--- a/gyproject/src/main/webapp/css/includes/variables.css
+++ b/gyproject/src/main/webapp/css/includes/variables.css
@@ -1,77 +1,94 @@
 @charset "UTF-8";
+/*폰트 적용*/
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
-.div-sub-content_increase {
+html {
+    font-family: "Noto Sans KR", sans-serif;
+}
+
+body,
+ul,
+li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.content_increase {
 	/* 늘어나는 영역 */
 	width: 100%;
 }
 
-.div-sub-content_padding {
+.content_padding {
 	/* 늘어나는 영역 패딩 */
 	padding: 10px;
 }
 
-.div-sub-content-100 {
+.sub-wrap_100 {
 	/* 높이 100px 영역 */
 	width: 100%;
 	height: 100px;
 }
 
-.div-sub-content-200 {
+.sub-wrap_200 {
 	/* 높이 200px 영역 */
 	width: 100%;
 	height: 200px;
 }
 
-.div-sub-content-300 {
+.sub-wrap_300 {
 	/* 높이 300px 영역 */
 	width: 100%;
 	height: 300px;
-	background: blue;
 }
 
-.div-sub-content-400 {
+.sub-wrap_400 {
 	/* 높이 400px 영역 */
 	width: 100%;
 	height: 400px;
 }
 
-.div-sub-content-500 {
+.sub-wrap_500 {
 	/* 높이 500px 영역 */
 	width: 100%;
 	height: 500px;
 }
 
-.div-sub-content-600 {
+.sub-wrap_600 {
 	/* 높이 600px 영역 */
 	width: 100%;
 	height: 600px;
 }
 
-.div-sub-content-700 {
+.sub-wrap_700 {
 	/* 높이 700px 영역 */
 	width: 100%;
 	height: 700px;
 }
 
-.div-sub-content-800 {
+.sub-wrap_800 {
 	/* 높이 800px 영역 */
 	width: 100%;
 	height: 800px;
 }
 
-.div-sub-content-900 {
+.sub-wrap_900 {
 	/* 높이 900px 영역 */
 	width: 100%;
 	height: 900px;
 }
 
-.div-sub-content-1000 {
+.sub-wrap_1000 {
 	/* 높이 1000px 영역 */
 	width: 100%;
 	height: 1000px;
 }
 
-.div-flex-column_center {
+.flex-column_center {
 	/* flex 가로세로 가운데 정렬 */
 	display: flex;
     justify-content: center;
@@ -79,10 +96,12 @@
     align-items: center;
 }
 
-.div-flex-column_row {
+.flex-column_row {
 	/* flex 가로로 정렬 */
 	display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .item-box {
@@ -90,6 +109,7 @@
 	width: 200px;
 	height: 300px;
 	border: 1px solid black;
+	margin: 50px;
 }
 
 .full-image {
@@ -98,21 +118,88 @@
 	height: 100%;
 }
 
-.item-box_top {
-	/* 사웊상자 위 영역 */
-	width: 100%;
-	height: 60%;
-	padding: 3px;
-}
-
-.item-box_bottom {
-	/* 사웊상자 아래 영역 */
-	widt: 100%;
-	height: 40%;
-	padding: 3px;
-}
-
-.cursor-onClick {
+.cursor-pointer {
 	/* 커서 클릭모양 바꾸기 */
 	cursor: pointer;
 }
+
+/* 상품 리스트 */
+.cell {
+    float: left;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+}
+
+.row::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+.img-box > img {
+    display: block;
+    width: 100%;
+}
+
+.list > ul > li {
+    width: calc(100% / 6);
+}
+
+.list > ul > li {
+    padding: 0 10px;
+}
+.list > ul {
+    margin: 0 -10px;
+}
+
+.list > ul > li > .product-name {
+	margin-top: 5px;
+    text-align: Center;
+    font-weight: bold;
+}
+.list > ul > li:hover > .product-name {
+    text-decoration: underline;
+}
+.list > ul > li > .product-price {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+.list > ul > li > .product-price::after {
+    content: "원";
+    font-size: 1rem;
+    font-weight:normal;
+}
+/* 상품 리스트 */
+
+/* 정렬 */
+.item-orderby {
+	width: 100%;
+	height: 50px;
+	border: 1px solid black;
+}
+
+.item-orderby_btn {
+	font-weight: bold;
+	font-size: 16px;
+	width: 20%;
+	height: 100%;
+	display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.item-orderby_btn > .click {
+	display: inline-block;
+	color: red;
+	cursor: pointer;
+	padding-top: 5%;
+}
+
+.item-orderby_btn > .none {
+	display: inline-block;
+	color: black;
+	cursor: pointer;
+	padding-top: 5%;
+}
+/* 정렬 */
