--- a/gyproject/src/main/webapp/css/includes/variables.css
+++ b/gyproject/src/main/webapp/css/includes/variables.css
@@ -1,6 +1,13 @@
 @charset "UTF-8";
 /*폰트 적용*/
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+
+:root {
+  --button-color: #ffffff;
+  --button-bg-color: #1e262c;
+  --button-hover-bg-color: #025ce2;
+}
 
 html {
     font-family: "Noto Sans KR", sans-serif;
@@ -203,3 +210,47 @@ a {
 	padding-top: 5%;
 }
 /* 정렬 */
+
+.btn_wrap {
+	width: 100%;
+    margin-top: 10px;
+    display: flex;
+}
+
+.btn_wrap > .right {
+	margin-left: auto;
+}
+
+.btn_wrap > .left {
+	margin-right: auto;
+}
+
+.btn {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  
+  background: var(--button-bg-color);
+  color: var(--button-color);
+  
+  margin: 0;
+  padding: 0.5rem 1rem;
+  
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 1.3rem;
+  font-weight: 400;
+  text-align: center;
+  text-decoration: none;
+  
+  border: none;
+  border-radius: 4px;
+  
+  display: inline-block;
+  width: auto;
+  
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  
+  cursor: pointer;
+  
+  transition: 0.5s;
+}
